--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -370,8 +370,8 @@ a:hover {
   padding-bottom: 0px !important;
 }
 .mat-form-field-appearance-legacy .mat-form-field-wrapper {
-  padding-top: 15px !important;
-  padding-bottom: 0px !important;
+  padding-top: 15px;
+  padding-bottom: 0px;
 }
 .add-grn-popup.mat-form-field-appearance-legacy .mat-form-field-wrapper {
   padding-top: 0px !important;
