--- a/src/app/shared/components/input-text-search/input-text-search.component.html
+++ b/src/app/shared/components/input-text-search/input-text-search.component.html
@@ -1,3 +1,4 @@
+{{ config.list }}
 <form [formGroup]="form">
     <mat-form-field class="width-100 border-input">
         <input #text matInput [placeholder]="config.placeholder" type="text" formControlName="searchInput" />
