--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -290,6 +290,15 @@ input {
   height: 40px;
 }
 
+.bs-gray-button.mat-button-base {
+  border: 2px solid #f2f2f2 !important;
+  background-color: #f2f2f2;
+  border-radius: 25px;
+  padding: 0px 20px;
+  font-weight: 600;
+  height: 40px;
+}
+
 @media only screen and (max-width: 576px) {
   .main-button.mat-button-base {
     border: 2px solid $main-color !important;
