--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -789,6 +789,7 @@ td.mat-footer-cell:first-of-type {
 }
 
 .mat-row {
+  border-bottom: 1px solid #bbbbbb;
   .mat-cell {
     color: #545454;
   }
